y first bostrap page

--- a/style.css
+++ b/style.css
@@ -14,3 +14,11 @@
 .text1{
     font-family: "Kanit", sans-serif;
 }
+.social-logo{
+    font-size: 15px;
+}
+.social-logo-1{
+    font-size: 30px;
+}
+
+   
